<resources>
    <string name="app_name">AIRSO - MAHDAR</string>
    <string name="resolve">Resolve</string>
    <string name="ok">OK</string>
    <string name="reload">Reload</string>
    <string name="help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_message">Message</string>
    <string name="dialog_title">Title</string>
    <string name="logout">Logout</string>
    <string name="take_photo">Photo</string>
    <string name="upload">Upload</string>
    <string name="config">Backend</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>   

    <string name="settings">settings</string>
    <!--    <string name="frontend" translatable="false">http://192.168.1.101:4200</string>-->
    <string name="frontend" translatable="false">file:///android_asset/driver-angular</string>
    <string name="refresh_data">Refresh</string>
    <!--string name="backend" translatable="false">http://192.168.100.112</string-->
    <!--string name="backend" translatable="false">https://dotdv.mpwt.gov.la/?language=en</string>-->
    <string name="backend" translatable="false">https://airso-dev.unescwa.org/?language=en</string>
    <string name="uploading">Uploading Data</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="center">GPS</string>
    <string name="cleanmup">Cleanup</string>
    <string name="qr_code">QR Code</string>
    <string name="my_location">Location</string>
    <string name="test_gpkg">Testar GeoPackage</string>
    <string name="update_map">Update Road Map</string>
    <string name="update_bounds">Update Boundaries</string>
    <string-array name="location_datasets">
        <item value="Fused">Fused</item>
        <item value="GPS">GPS</item>
        <item value="Network">Network</item>
    </string-array>
</resources>